--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
       background-repeat: no-repeat;
       background-size: cover;
       }
+      .parallax h1{
+        font-weight: 600;
+        font-size: 2.4em;
+        color: #085b70;
+        text-align:center;
+      }
       .jumbotron {
         /* The image used */
         background-image: url('1615216723645.jfif');
@@ -76,11 +82,13 @@
           .gallery h3{
             font-weight: 600;
             font-size: 2.4em;
+            color: #f7f7f7;
             text-align:center;
           }
           .gallery h4{
             font-weight: 400;
             font-size: 2em;
+            color: #f7f7f7;
             text-align:center;
           }
 
@@ -340,6 +348,12 @@ background: linear-gradient(to right, #ffc500, #c21500);
 background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
 background: linear-gradient(to right, #0ABFBC, #FC354C);
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
   </style>
 </head>
 <body>
@@ -374,6 +388,20 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
     <div class="col-sm-3">
       <img src="assets\img\profile-img.png" class="img-responsive" style="width:100%"" alt="Image">
     </div>      
+  </div>
+</div>
+<div id= "experience" class ="experience">
+  <h1>About me...</h1>
+</div>
+<div class = "parallax">
+  <div class ="Container"> 
+    <br>
+    <h1>The are a lot of things that I like about me, but there are more thing that I would like to improve about myself.
+      I like videogames, Trading card games, Anime and spending time with my family, but I also like spending time evualating my decisions and convincing myself to not commit the same error twice.
+      One of my favorite things is to teach, I appreciate knowledge and I enjoy to share it with other people, most of the time I'll surprise you with a random fun fact. 
+      <img src="foto1.png"  style="width:20%" class="centered">
+    </h1>
+    
   </div>
 </div>
 <div id= "experience" class="experience"> 
@@ -421,9 +449,12 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
 
   </div>
 </div>
+<br>
+
 <div id= "experience" class="experience"> 
   <h1>Technologies and SuperBadges</h1>
 </div>
+<br>
 <div class="parallax">
   <div class="row">
     <div class="col-sm-4">
@@ -517,6 +548,7 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
       </div>
   </div>
 </div>
+<br>
 <div class="gallery">    
   <div class="row">
     <div class="col-sm-4">
@@ -527,10 +559,12 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
     <div class="col-sm-4"> 
       <h3>Mobile Robot-Rasp+Arduino v2</h3>
       <img src="mobilerobot.jpeg" class="img-responsive" style="width:100%" alt="Image">
+      <h4>As a part of the program in the UPY with the help of my schoolmates we build a autonomous robot for tracking an objective and follow it. The most challenging part was calibrating the camera.</h4>
     </div>
     <div class="col-sm-4"> 
       <h3>IoT Power measuremnt device</h3>
       <img src="D:\Salesforce\Web\BolanosB.github.io\pzem.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <h4>Using a Pzem and a ESP with the help of the internet I helped to the develop of a device with the capacity to stream in realtime the electricity usage of a household.</h4>
     </div>
   </div>
 </div>
