--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#experience">Experience</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a href="#gall">Gallery</a></li>
         
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -549,7 +549,7 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
   </div>
 </div>
 <br>
-<div class="gallery">    
+<div class="gallery" id="gall">    
   <div class="row">
     <div class="col-sm-4">
       <h3>Gesture Therapy Web</h3>
@@ -563,7 +563,7 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
     </div>
     <div class="col-sm-4"> 
       <h3>IoT Power measuremnt device</h3>
-      <img src="D:\Salesforce\Web\BolanosB.github.io\pzem.jpg" class="img-responsive" style="width:100%" alt="Image">
+      <img src="pzem.jpg" class="img-responsive" style="width:100%" alt="Image">
       <h4>Using a Pzem and a ESP with the help of the internet I helped to the develop of a device with the capacity to stream in realtime the electricity usage of a household.</h4>
     </div>
   </div>
