--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
         
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-inbox"></span> Contact Me!</a></li>
+        <li><a href="https://www.linkedin.com/in/bolanosbraulio/"><span class="glyphicon glyphicon-inbox"></span> Contact Me!</a></li>
       </ul>
     </div>
   </div>
