--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
               display:none;
           }
         }
+        .minitron {
+          min-height: 450px;
+        }
+        @media (min-width:800px){
+          .minitron{
+              display:none;
+          }
+        }
         .experience h1{
           font-weight: 600;
           font-size: 2.4em;
@@ -431,6 +439,9 @@ background: linear-gradient(to right, #0ABFBC, #FC354C);
       <img src="assets\img\profile-img.png" class="img-responsive" style="width:100%"" alt="Image">
     </div>      
   </div>
+</div>
+<div class="minitron">
+  <img src="tatakae.png"  style="width:100%">
 </div>
 <div id= "experience" class ="experience">
   <h1>About me...</h1>
